code/iptables
# Generated by iptables-save v1.4.7 on Fri Mar 21 13:57:19 2014
*mangle
:PREROUTING ACCEPT [397799:73416441]
:INPUT ACCEPT [384526:72372358]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [277378:70140786]
:POSTROUTING ACCEPT [284486:71091262]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Mar 21 13:57:19 2014
# Generated by iptables-save v1.4.7 on Fri Mar 21 13:57:19 2014
*nat
:PREROUTING ACCEPT [77459:7409848]
:POSTROUTING ACCEPT [3028:343755]
:OUTPUT ACCEPT [3042:344727]
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -o eth3 -j MASQUERADE
COMMIT
# Completed on Fri Mar 21 13:57:19 2014
# Generated by iptables-save v1.4.7 on Fri Mar 21 13:57:19 2014
*filter
:INPUT ACCEPT [9885:1334894]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [277376:70140554]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 15001:15004 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 15001:15004 -j ACCEPT
-A INPUT -p udp -m udp --dport 1024 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1024 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1025:65535 --dport 372 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p udp -m udp --sport 1025:65535 --dport 372 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -i eth3 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth3 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -i eth3 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 8649 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --dport 3306 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --dport 40000 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth3 -p tcp -m tcp --dport 0:1023 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth3 -p udp -m udp --dport 0:1023 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth2 -p tcp -m tcp --dport 15001:15004 -j ACCEPT
-A INPUT -i eth2 -p udp -m udp --dport 15001:15004 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i eth3 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -j ACCEPT
COMMIT
# Completed on Fri Mar 21 13:57:19 2014
